...
//            ChoiceView( symbol: symbol )
//        }
    }
}

struct ChoiceView: View {
    @Environment(\.dismiss) var dismiss
    
    var title: String
    var choices: [Symbol]
    @Binding var selection: Symbol?

    private func Navigation( content: () -> some View ) -> some View {
...
                    }
                    .accessibilityIdentifier("dismiss")
                    
                }
            }
        }
        .accessibilityIdentifier("choiceview")
    }
}

struct SwiftUIView_Previews: PreviewProvider {
    static var previews: some View {
        
...
