...
        }
    label: {
        Label( "Toggle Editor", systemImage: "doc.plaintext.fill" )
            .labelStyle(.iconOnly)
            .foregroundColor( isEditorVisible ? .blue : .gray)
    }
    .accessibilityIdentifier("editor")
        
    }
    
    @available(swift, obsoleted: 1.1,message: "from 1.1 auto save has been introduced")
    func SaveButton() -> some View {
        
...
    label: {
        Label( "Toggle Preview", systemImage: "photo.fill" )
            .labelStyle(.iconOnly)
            .foregroundColor( isDiagramVisible ? .blue : .gray)
        
    }
    .accessibilityIdentifier("diagram")
    }
    
    
    
}

...
